<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_user"
            android:title="@string/nav_profil" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_edit"
            android:title="@string/nav_report" />
        <item
            android:id="@+id/nav_hitory"
            android:icon="@drawable/ic_file"
            android:title="@string/nav_history" />

        <item
            android:id="@+id/nav_panik"
            android:icon="@drawable/ic_alarm"
            android:title="@string/nav_panik" />

        <item
            android:id="@+id/nav_keluar"
            android:icon="@drawable/ic_exit"
            android:title="@string/nav_keluar" />
    </group>


</menu>
